syntax = "proto3";
package auction.item.v1;
option go_package = "auction/proto/gen/item/v1;itemv1";
import "google/protobuf/timestamp.proto";

service ItemService {
    rpc GetItemForBid(GetItemForBidRequest) returns (GetItemForBidResponse);
}

message GetItemForBidRequest {
    string item_id = 1;
}

message GetItemForBidResponse {
    string id = 1;
    string seller_id = 2;
    string status = 3;
    google.protobuf.Timestamp start_date = 4;
    google.protobuf.Timestamp end_date = 5;
    string start_price = 6;
    string current_price = 7;
    string bid_increment = 8;
    string reserve_price = 9;
    string buyout_price = 10;
    string end_price = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
}
